# sepsis-predictor

./: .gitignore  DATA_PIPELINE.md  LICENSE  README.md  TRAINING_PIPELINE.md  pyproject.toml
.github/agents/: doc-scribe.agent.md  pipeline-oracle.agent.md
.github/briefs/: clinical_heuristics_brief.md  cohort_builder_brief.md  extractor_brief.md  imputation_brief.md  labels_brief.md  trajectory_builder_brief.md
.github/prompts/: document-pipeline-file.prompt.md
src/MIMIC-sepsis/: format_traj.drawio
src/MIMIC-sepsis/src/: ce.py  demog.py  format_traj.py  format_traj_v2.py  init_preprocess.py  init_preprocess_v2.py
src/MIMIC-sepsis/src/extraction/: ce.py  culture.py  extraction_metadata.json  extractor.py  fluid.py  icustays.py  microbio.py  preadm_fluid.py  vaso.py
src/dat_exploration/: data_cleaning.ipynb  data_visualisation.ipynb  preimputation.ipynb  visualise.ipynb
src/data_processing/: MIMIC_columns.yaml  add_missingness_features.py  cleaning_config.json  cohort_builder.py  config.yaml  data_cleaning.ipynb  data_visualisation.ipynb  load_mimic.sh  main.py  main_pipeline.py  processing.md  trajectory_builder.py
src/data_processing/clinical_reference/: README.md  outlier_bounds.json
src/data_processing/configs/: README.md  cleaning_config.json
src/data_processing/docs/: REFERENCE.md
src/data_processing/extraction/: extraction_metadata.json  extractor.py
src/data_processing/processing_pipeline/extraction/: abx.py  demog.py  extraction_metadata.json  extractor.py  lab_ce.py  lab_le.py  mechvent.py  uo.py
src/data_processing/utils/: clinical_heuristics.py  imputation.py  labels.py
src/demo_ui/: main.py  temp.ipynb
src/model_training/: analyze_timestep_performance.ipynb  config.yaml  main.py  train.py  train_pipeline.py  train_pipeline_lstm.py  trainv2.py  trainv3.py  tutorial.ipynb
src/model_training/custom_funcs/: custom_plots.py
src/model_training/data/: loader.py  sequence_utils.py
src/model_training/models/: base_model.py  factory.py  lightgbm_model.py  lstm_model.py  xgboost_model.py
src/model_training/utils/: metrics.py
