[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "mlflow>=2.11.0",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "optuna-integration>=4.8.0",
    "pandas>=2.1.0,<3.0.0",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=69.5.1",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.46",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]


[dependency-groups]
dev = [
    "pip>=26.0.1",
]
