[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "mlflow>=2.11.0",
    "numpy>=2.4.2",
    "optuna>=4.8.0",
    "optuna-integration>=4.8.0",
    "pandas>=2.1.0,<3.0.0",
    "plotly>=6.7.0",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools>=69.5.1",
    "shap>=0.51.0",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]


[dependency-groups]
dev = [
    "pip>=26.0.1",
    "ruff>=0.15.11",
]


[tool.ruff]
line-length = 88
target-version = "py311"  

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names etc.)
    "I",    # isort (import ordering)
    "N",    # pep8-naming
    "D",    # pydocstring — enforces NumPy docstrings if configured
    "UP",   # pyupgrade (modernise syntax automatically)
    "B",    # flake8-bugbear (catches common bugs)
    "SIM",  # flake8-simplify
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"  # enforces NumPy-style docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
